# assurance-copilot

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  docker-compose.maxkb.yml  pyproject.toml  requirements.txt
data/frameworks/: ismsp_controls.md
eval/: README.md  run_eval.py
eval/dataset/: ismsp_samples.jsonl
src/assurance_copilot/: __init__.py  cli.py  config.py  models.py
src/assurance_copilot/judgment/: hitl.py  prompts.py  reviewer.py
src/assurance_copilot/legal/: __init__.py  grounding.py  law_client.py
src/assurance_copilot/ocr/: apple_vision.py  base.py  tesseract.py
src/assurance_copilot/oscal/: __init__.py  serializer.py
src/assurance_copilot/retrieval/: __init__.py  local_retriever.py  maxkb_client.py
tests/: test_ablation.py  test_cli.py  test_grounding.py  test_hitl.py  test_law_client.py  test_maxkb.py  test_ocr.py  test_oscal.py
